/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.protocols.rsm.map.v1;

import "v1/headers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

// Map is a service for a map primitive
service Map {
    // Size returns the size of the map
    rpc Size (SizeRequest) returns (SizeResponse);

    // Put puts an entry into the map
    rpc Put (PutRequest) returns (PutResponse);

    // Insert inserts an entry into the map
    rpc Insert (InsertRequest) returns (InsertResponse);

    // Update updates an entry in the map
    rpc Update (UpdateRequest) returns (UpdateResponse);

    // Get gets the entry for a key
    rpc Get (GetRequest) returns (GetResponse);

    // Remove removes an entry from the map
    rpc Remove (RemoveRequest) returns (RemoveResponse);

    // Clear removes all entries from the map
    rpc Clear (ClearRequest) returns (ClearResponse);

    // Lock locks a key in the map
    rpc Lock (LockRequest) returns (LockResponse);

    // Unlock unlocks a key in the map
    rpc Unlock (UnlockRequest) returns (UnlockResponse);

    // Events listens for change events
    rpc Events (EventsRequest) returns (stream EventsResponse);

    // Entries lists all entries in the map
    rpc Entries (EntriesRequest) returns (stream EntriesResponse);

    // Prepare prepares a transaction
    rpc Prepare (PrepareRequest) returns (PrepareResponse);

    // Commit commits a transaction
    rpc Commit (CommitRequest) returns (CommitResponse);

    // Abort aborts a transaction
    rpc Abort (AbortRequest) returns (AbortResponse);

    // Apply prepares and commits a transaction in a single request
    rpc Apply (ApplyRequest) returns (ApplyResponse);
}

message SizeRequest {
    atomix.protocols.rsm.v1.QueryRequestHeaders headers = 1;
    SizeInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message SizeResponse {
    atomix.protocols.rsm.v1.QueryResponseHeaders headers = 1;
    SizeOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message PutRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    PutInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message PutResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    PutOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message InsertRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    InsertInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message InsertResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    InsertOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message UpdateRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    UpdateInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message UpdateResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    UpdateOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message GetRequest {
    atomix.protocols.rsm.v1.QueryRequestHeaders headers = 1;
    GetInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message GetResponse {
    atomix.protocols.rsm.v1.QueryResponseHeaders headers = 1;
    GetOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message RemoveRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    RemoveInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message RemoveResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    RemoveOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message ClearRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    ClearInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message ClearResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    ClearOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message LockRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    LockInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message LockResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    LockOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message UnlockRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    UnlockInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message UnlockResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    UnlockOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message PrepareRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    PrepareInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message PrepareResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    PrepareOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message CommitRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    CommitInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message CommitResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    CommitOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message AbortRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    AbortInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message AbortResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    AbortOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message ApplyRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    ApplyInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message ApplyResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    ApplyOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message EntriesRequest {
    atomix.protocols.rsm.v1.QueryRequestHeaders headers = 1;
    EntriesInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message EntriesResponse {
    atomix.protocols.rsm.v1.QueryResponseHeaders headers = 1;
    EntriesOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message EventsRequest {
    atomix.protocols.rsm.v1.ProposalRequestHeaders headers = 1;
    EventsInput input = 2 [
        (gogoproto.embed) = true
    ];
}

message EventsResponse {
    atomix.protocols.rsm.v1.ProposalResponseHeaders headers = 1;
    EventsOutput output = 2 [
        (gogoproto.embed) = true
    ];
}

message MapListener {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
    string key = 2;
}

message MapEntry {
    string key = 1;
    MapValue value = 2;
}

message MapValue {
    bytes value = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
    google.protobuf.Timestamp expire = 3 [
        (gogoproto.stdtime) = true
    ];
}

message MapInput {
    oneof input {
        SizeInput size = 1;
        PutInput put = 2;
        InsertInput insert = 3;
        UpdateInput update = 4;
        GetInput get = 5;
        RemoveInput remove = 6;
        ClearInput clear = 7;
        LockInput lock = 8;
        UnlockInput unlock = 9;
        EntriesInput entries = 10;
        EventsInput events = 11;
        PrepareInput prepare = 12;
        CommitInput commit = 13;
        AbortInput abort = 14;
        ApplyInput apply = 15;
    }
}

message MapOutput {
    oneof output {
        SizeOutput size = 1;
        PutOutput put = 2;
        InsertOutput insert = 3;
        UpdateOutput update = 4;
        GetOutput get = 5;
        RemoveOutput remove = 6;
        ClearOutput clear = 7;
        LockOutput lock = 8;
        UnlockOutput unlock = 9;
        EntriesOutput entries = 10;
        EventsOutput events = 11;
        PrepareOutput prepare = 12;
        CommitOutput commit = 13;
        AbortOutput abort = 14;
        ApplyOutput apply = 15;
    }
}

message SizeInput {

}

message SizeOutput {
    uint32 size = 1;
}

message PutInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_index = 4 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
}

message PutOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
    IndexedValue prev_value = 2;
}

message InsertInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message InsertOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
}

message UpdateInput {
    string key = 1;
    bytes value = 2;
    google.protobuf.Duration ttl = 3 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
    uint64 prev_index = 4 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
}

message UpdateOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
    IndexedValue prev_value = 2 [
        (gogoproto.nullable) = false
    ];
}

message GetInput {
    string key = 1;
}

message GetOutput {
    IndexedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message RemoveInput {
    string key = 1;
    uint64 prev_index = 2 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
}

message RemoveOutput {
    IndexedValue value = 1 [
        (gogoproto.nullable) = false
    ];
}

message ClearInput {

}

message ClearOutput {

}

message LockInput {
    repeated string keys = 1;
    google.protobuf.Duration timeout = 2 [
        (gogoproto.stdduration) = true
    ];
}

message LockOutput {

}

message UnlockInput {
    repeated string keys = 1;
}

message UnlockOutput {

}

message PrepareInput {
    uint64 sequence_num = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.SequenceNum"
    ];
    repeated MapInput inputs = 2 [
        (gogoproto.nullable) = false
    ];
}

message PrepareOutput {

}

message CommitInput {
    uint64 sequence_num = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.SequenceNum"
    ];
}

message CommitOutput {
    repeated MapOutput outputs = 1 [
        (gogoproto.nullable) = false
    ];
}

message AbortInput {
    uint64 sequence_num = 1 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.SequenceNum"
    ];
}

message AbortOutput {

}

message ApplyInput {
    repeated MapInput inputs = 1 [
        (gogoproto.nullable) = false
    ];
}

message ApplyOutput {
    repeated MapOutput outputs = 1 [
        (gogoproto.nullable) = false
    ];
}

message EntriesInput {
    bool watch = 1;
}

message EntriesOutput {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsInput {
    string key = 1;
}

message EventsOutput {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    string key = 1;

    oneof event {
        Inserted inserted = 2;
        Updated updated = 3;
        Removed removed = 4;
    }

    message Inserted {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
    }

    message Updated {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        IndexedValue prev_value = 2 [
            (gogoproto.nullable) = false
        ];
    }

    message Removed {
        IndexedValue value = 1 [
            (gogoproto.nullable) = false
        ];
        bool expired = 2;
    }
}

message Entry {
    string key = 1;
    IndexedValue value = 2;
}

message IndexedValue {
    bytes value = 1;
    uint64 index = 2 [
        (gogoproto.casttype) = "github.com/atomix/atomix/protocols/rsm/api/v1.Index"
    ];
}
